--- a/www/templates/settings/settingsList.html
+++ b/www/templates/settings/settingsList.html
@@ -17,6 +17,12 @@
         <i class="icon ion-android-download"></i>
         <p>עדכון גרסה</p>
       </a>
+
+      <a class="item item-icon-right" ng-click="forwardTo('app.appProfile')">
+        <i class="icon ion-help-buoy"></i>
+        <p>אודות אפליקציה</p>
+      </a>
+
     </div>
   </ion-content>
 </ion-view>
