--- a/www/templates/apps/docApprove/p2_moduleList.html
+++ b/www/templates/apps/docApprove/p2_moduleList.html
@@ -22,7 +22,7 @@
     <div class="row row-bottom">
       <div class="col"></div>
     </div>
-
+    <!--
     <div ng-repeat="source in category_sources" ng-model="btn_class.on_release" on-touch="btn_class.on_release = !btn_class.on_release" on-release="btn_class.on_release = !btn_class.on_release">
       <div class="row" ng-show ="btn_class.on_release">
         <div class="col col-10"></div>
@@ -44,14 +44,29 @@
         </div>
         <div class="col col-10"></div>
       </div>
-      <!---->
-      <!--
-      <div class="pele-item-on-touch item item-icon-right" ng-click="onClick(source.MODULE_NAME ,source.DOCUMENT_QTY )" ng-show ="!btn_class.on_release">
-        <div class="app-button">
-          <p class="description">({{source.DOCUMENT_QTY}})&nbsp;&nbsp;{{source.MODULE_DESC}}</p>
+
+    </div>
+    -->
+    <div ng-repeat="source in category_sources" ng-model="btn_class.on_release" on-touch="btn_class.on_release = !btn_class.on_release" on-release="btn_class.on_release = !btn_class.on_release">
+      <div class="row" ng-show ="btn_class.on_release" ng-click="onClick(source.MODULE_NAME ,source.DOCUMENT_QTY )">
+        <div class="col col-10"></div>
+        <div class="col col-80 pele-item-on-release item item-icon-right" >
+          <div class="app-button">
+            <p class="description">{{source.MODULE_DESC}}&nbsp;&nbsp;({{source.DOCUMENT_QTY}})</p>
+          </div>
         </div>
+        <div class="col col-10"></div>
       </div>
-      -->
+      <div class="row" ng-show ="!btn_class.on_release" ng-click="onClick(source.MODULE_NAME ,source.DOCUMENT_QTY )">
+        <div class="col col-10"></div>
+        <div class="col col-80 pele-item-on-touch item item-icon-right" >
+
+          <div class="app-button">
+            <p class="description">{{source.MODULE_DESC}}&nbsp;&nbsp;({{source.DOCUMENT_QTY}})</p>
+          </div>
+        </div>
+        <div class="col col-10"></div>
+      </div>
     </div>
   </ion-content>
 </ion-view>
