--- a/www/templates/apps/docApprove/p3_moduleDocList.html
+++ b/www/templates/apps/docApprove/p3_moduleDocList.html
@@ -16,37 +16,9 @@
     <div class="pele-page-title pele-img-size pele-page-title-font">
       <a class="description">{{title}}</a>
     </div>
-    <!-- -->
-    <!--<label class="item item-input"  ng-click="searchBarCreteria()">-->
 
-      <!--&lt;!&ndash;<i class="icon ion-search placeholder-icon"></i>&ndash;&gt;-->
-      <!--<input type="search" class="search-area" placeholder="חיפוש"ng-model="searchText.text">-->
-      <!--<a class="search-icon" ></a>-->
-    <!--</label>-->
-
-    <!--<ion-list>-->
-      <!--<div ng-repeat="chat in chats">-->
-        <!--<ion-item class="item-stable"-->
-                  <!--ng-click="toggleGroup(chat.DOC_NAME)"-->
-                  <!--ng-class="{active: isGroupShown(chat.DOC_NAME)}">-->
-          <!--<a ng-class="isGroupShown(chat.DOC_NAME) ? 'icon-expand' : 'icon-collapse'"></a>-->
-          <!--<span class="item-title">{{chat.DOC_NAME}}&nbsp;({{chat.FORM_QTY}})</span>-->
-        <!--</ion-item>-->
-        <!--<ion-item class="item-accordion item-remove-animate item-avatar item-icon-right" ng-repeat="item in chat.DOCUMENTS.DOCUMENTS_ROW | filter:searchText.text" ng-show="isGroupShown(chat.DOC_NAME)" ng-click="forwardToDoc(item.DOC_ID, item.DOC_INIT_ID)">-->
-          <!--<img ng-src="img/employees/worker.png">-->
-          <!--<h2>{{item.MESSAGE}}</h2>-->
-          <!--<h3>{{item.DOC_INIT_ID}}</h3>-->
-          <!--<i class="icon ion-chevron-right icon-accessory"></i>-->
-          <!--<ion-option-button class="button-assertive" ng-click="remove(item.DOC_INIT_ID)">-->
-            <!--מחק-->
-          <!--</ion-option-button>-->
-        <!--</ion-item>-->
-      <!--</div>-->
-    <!--</ion-list>-->
-    <!---->
     <label class="item item-input item-search"  ng-click="searchBarCreteria()">
 
-      <!--<i class="icon ion-search placeholder-icon"></i>-->
       <input type="search" class="search-area" style="color:#fafafa;" placeholder="חיפוש"ng-model="searchText.text">
       <a class="search-icon" ></a>
     </label>
@@ -54,23 +26,33 @@
     <ion-list>
       <div ng-repeat="chat in chats">
         <ion-item class="item-stable"
-                  ng-click="toggleGroup(chat.DOC_NAME)"
-                  ng-class="{active: isGroupShown(chat.DOC_NAME)}">
-          <a ng-class="isGroupShown(chat.DOC_NAME) ? 'icon-expand' : 'icon-collapse'"></a>
+                  ng-click="toggleGroup(chat.DOC_ID)"
+                  ng-class="{active: isGroupShown(chat.DOC_ID)}">
+          <a ng-class="isGroupShown(chat.DOC_ID) ? 'icon-expand' : 'icon-collapse'"></a>
           <span class="item-title">{{chat.DOC_NAME}}&nbsp;({{chat.FORM_QTY}})</span>
         </ion-item>
-        <ion-item class="item-accordion item-remove-animate item-icon-right item-doc-list" ng-repeat="item in chat.DOCUMENTS.DOCUMENTS_ROW | filter:searchText.text" ng-show="isGroupShown(chat.DOC_NAME)" ng-click="forwardToDoc(item.DOC_ID, item.DOC_INIT_ID)">
+        <!--
+        <ion-item class="item-accordion item-remove-animate item-icon-right item-doc-list" ng-repeat="item in chat.DOCUMENTS.DOCUMENTS_ROW | filter:searchText.text" ng-show="isGroupShown(chat.DOC_ID)" ng-click="forwardToDoc(item.DOC_ID, item.DOC_INIT_ID)">
           <div class="item-doc">
-            <!--<div class="item-doc">-->
+
             <img ng-src="img/DocApprove/document_redirect.png">
             <h2>{{item.MESSAGE}}</h2>
             <h3>{{item.DOC_INIT_ID}}</h3>
-            <!--<i class="icon ion-chevron-right icon-accessory"></i>-->
-            <ion-option-button class="button-assertive" ng-click="remove(item.DOC_INIT_ID)">
-              מחק
+
+            <ion-option-button class="button-assertive">
+
             </ion-option-button>
           </div>
+
         </ion-item>
+        -->
+        <ion-item class="item-doc-list" ng-repeat="item in chat.DOCUMENTS.DOCUMENTS_ROW | filter:searchText.text" ng-show="isGroupShown(chat.DOC_ID)" ng-click="forwardToDoc(item.DOC_ID, item.DOC_INIT_ID)">
+          <img  ng-src="img/DocApprove/document_redirect.png">
+          <h2>{{item.MESSAGE}}</h2>
+          <h3>{{item.DOC_INIT_ID}}</h3>
+          <!--<i class="icon ion-chevron-right icon-accessory"></i>-->
+        </ion-item>
+
       </div>
     </ion-list>
   </ion-content>
