--- a/www/templates/apps/docApprove/p4_doc_242.html
+++ b/www/templates/apps/docApprove/p4_doc_242.html
@@ -37,7 +37,7 @@
               <p class="text-right">{{detail.USER_NAME}}</p>
             </a>
             <!--</div>-->
-            <label class="item" ng-hide="pelHideShow(detail.ACTION)">
+            <label class="item" ng-hide="pelHideShow(detail.ACTION , detail.NOTE)">
               <div class="row">
                 <div class="col text-right">פעולה : </div>
                 <div class="col col-75 text-right">{{detail.ACTION}}</div>
@@ -48,7 +48,7 @@
               </div>
               <div class="row">
                 <div class="col text-right">הערות : </div>
-                <textarea class="col col-75 text-right" readonly="true">{{detail.ACTION_NOTE}}</textarea>
+                <textarea class="col col-75 text-right" readonly="true">{{detail.NOTE}}</textarea>
               </div>
             </label>
           </div>
