--- a/www/templates/apps/docApprove/p4_doc_807.html
+++ b/www/templates/apps/docApprove/p4_doc_807.html
@@ -36,7 +36,7 @@
               <p class="text-right">{{detail.USER_NAME}}</p>
             </a>
             <!--</div>-->
-            <label class="item" ng-hide="pelHideShow(detail.ACTION)">
+            <label class="item" ng-hide="pelHideShow(detail.ACTION , detail.NOTE)">
               <div class="row">
                 <div class="col text-right">פעולה : </div>
                 <div class="col col-75 text-right">{{detail.ACTION}}</div>
@@ -73,34 +73,20 @@
         <label class="item" dir="RTL">
           <!-- Holly Day -->
           <div class="row">
-            <div class="col col-30 text-right">יתרת שעות חופשה</div>
+            <div class="col text-right">יתרת שעות חופשה</div>
           </div>
           <div class="row">
-            <textarea class="col text-right" readonly="true" rows="2" on-touch="openExistText(HOLIDAY_BALANCE)">{{HOLIDAY_BALANCE}}</textarea>
+            <div class="col text-right" style="color:red;">{{HOLIDAY_BALANCE}}</div>
           </div>
         </label>
         <div ng-repeat="detail in docDetails.DOC_LINES" type="item-text-wrap" dir="RTL">
-            <a class="item item-divider item-icon-right">
+            <a class="item item-divider item-icon-right" ng-click="toggleGroup(detail.ATTRIBUTE2)">
               <i class="icon ion-android-calendar"></i>
-              <p class="float-right">{{detail.EFFECTIVE_DATE}}</p>
-              <span>יום: {{detail.WEEK_DAY}}</span>
-              <span class="tab">סה"כ
-                {{detail.ALL_HOURS}}
-              </span>
+              <p class="float-right">מ : {{detail.ATTRIBUTE2}}</p>
+              <p class="float-right tab">עד: {{detail.ATTRIBUTE3}}</p>
+              <i ng-class="isGroupShown(detail.ATTRIBUTE2) ? 'icon-expand' : 'icon-collapse'"></i>
             </a>
-          <label class="item">
-
-            <!--- From Date --->
-            <div class="row">
-              <div class="col col-30 text-right">מתאריך : </div>
-              <div class="col col-78 text-right">{{detail.ATTRIBUTE2}}</div>
-            </div>
-            <!--- To Date --->
-            <div class="row">
-              <div class="col col-30 text-right">עד תאריך : </div>
-              <div class="col col-78 text-right">{{detail.ATTRIBUTE3}}</div>
-            </div>
-
+          <label class="item" ng-show="isGroupShown(detail.ATTRIBUTE2)">
             <div class="row">
               <div class="col col-30 text-right">סיבה העדרות : </div>
               <div class="col col-70 text-right" readonly="true" on-touch="openExistText(detail.ATTRIBUTE4)">
