--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -46,24 +46,27 @@
           <div class="user-image-container">
             <pre-img ratio="_1_1" helper-class="rounded-image">
               <!--<img class="user-image" ng-src="https://s3.amazonaws.com/uifaces/faces/twitter/brynn/128.jpg" spinner-on-load>-->
-              <img class="user-image" ng-src="img/employees/worker.png" spinner-on-load>
+              <!--<img class="user-image" ng-src="img/employees/worker.png" spinner-on-load>-->
+              <img class="user-image" ng-src="res/icon.png" spinner-on-load>
             </pre-img>
           </div>
-          <h2 class="greeting">תמונה בקרוב</h2>
-          <!--<p class="message">ברוכים שבים</p>-->
+          <h2 class="greeting text-right ">פלאפון</h2>
+          <p class="message text-right">תקשורת בע"מ</p>
         </ion-item>
         <ion-item class="item-icon-left" nav-clear menu-close ui-sref="app.p1_appsLists">
           <i class="icon ion-document" ng-class="myClass"></i>
-          <h2 class="menu-text"  >בחירת אפליקציה</h2>
+          <h2 class="menu-text text-right"  >בחירת אפליקציה</h2>
         </ion-item>
         <ion-item class="item-icon-left" nav-clear menu-close ui-sref="app.settings">
           <i class="icon ion-gear-a" ng-class="myClass"></i>
-          <h2 class="menu-text">הגדרות</h2>
+          <h2 class="menu-text text-right">הגדרות</h2>
         </ion-item>
-        <ion-item class="item-icon-left" nav-clear menu-close ui-sref="app.home" ng-click="logout()">
+        <!--
+        <ion-item class="item-icon-left" nav-clear menu-close ui-sref="app.home" ng-click="logout()" ng-model="menu.isShowLogOut" ng-show="menu.isShowLogOut">
           <i class="icon ion-log-out" ng-class="myClass"></i>
           <h2 class="menu-text">יציאה מאפליקציה</h2>
         </ion-item>
+        -->
 
       </ion-list>
     </ion-content>
